# my-words

./: .gitignore  README.md  package.json  rss-recommendations.md
.claude/: settings.local.json
.github/workflows/: generate-newsletter.yml
newsletters/: diary_homepage.md  homepage.md
newsletters/2026-05-16/: ai_news_2026-05-16.md  arxiv_cs_AI_2026-05-16.md  diary.md  github_trending_2026-05-16.md  ithome_2026-05-16.md  linuxdo_2026-05-16.md  meituan_2026-05-16.md  newsletter.md  ruanyifeng_2026-05-16.md  shaoshupai_2026-05-16.md  v2ex_hot_2026-05-16.md  zhihu_2026-05-16.md
script/newsletter/: .dockerignore  .env.example  Dockerfile  config.py  diary.py  docker-compose.yml  llm.py  main.py  news_36kr.py  news_ai_news.py  news_arxiv.py  news_github_trending_daily.py  news_go_weekly.py  news_hacker_news.py  news_ithome.py  news_jiqizhixin.py  news_linuxdo.py  news_meituan.py  news_reddit.py  news_ruanyifeng.py  news_shaoshupai.py  news_utils.py  news_v2ex.py  news_zhihu.py  newsletter.py  push.py  pyproject.toml
script/newsletter/tokenizer/: deepseek_tokenizer.py
